alterando caminho de links

--- a/sobre.html
+++ b/sobre.html
@@ -15,11 +15,11 @@
         <div id="hero"></div>
         <header id="navbar">
                 <div id="logo">
-                    <a href="home.html"><img src="imagens/logo.png" alt="Logo Taciana Feitosa Arquitetura"></a>
+                    <a href="index.html"><img src="imagens/logo.png" alt="Logo Taciana Feitosa Arquitetura"></a>
                 </div>
                 <nav id="nav-menu">
                     <ul>
-                        <li><a href="home.html" rel="prev">Home</a></li>
+                        <li><a href="index.html" rel="prev">Home</a></li>
                         <li><a href="sobre.html" aria-current="page">Sobre</a></li>
                         <li><a href="projetos.html" rel="next">Projetos</a></li>
                         <li><a href="contato.html">Contato</a></li>
@@ -65,7 +65,7 @@
     <footer>
         <section id="nav-footer">
             <div id="logo-footer">
-                <a href="home.html"><img src="imagens/logo.png" alt="Logo Taciana Feitosa Arquitetura"></a>
+                <a href="index.html"><img src="imagens/logo.png" alt="Logo Taciana Feitosa Arquitetura"></a>
             </div>
             <div id="contato">
                 <div id="socials">
