--- a/contato.html
+++ b/contato.html
@@ -14,11 +14,11 @@
         <div id="hero"></div>
         <header id="navbar">
                 <div id="logo">
-                    <a href="home.html"><img src="imagens/logo.png" alt="Logo Taciana Feitosa Arquitetura"></a>
+                    <a href="index.html"><img src="imagens/logo.png" alt="Logo Taciana Feitosa Arquitetura"></a>
                 </div>
                 <nav id="nav-menu">
                     <ul>
-                        <li><a href="home.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="sobre.html">Sobre</a></li>
                         <li><a href="projetos.html" rel="prev">Projetos</a></li>
                         <li><a href="contato.html" aria-current="page">Contato</a></li>
@@ -64,7 +64,7 @@
     <footer>
         <section id="nav-footer">
             <div id="logo-footer">
-                <a href="home.html"><img src="imagens/logo.png" alt="Logo Taciana Feitosa Arquitetura"></a>
+                <a href="index.html"><img src="imagens/logo.png" alt="Logo Taciana Feitosa Arquitetura"></a>
             </div>
             <div id="contato">
                 <div id="socials">
