--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <div id="hero"></div>
         <header id="navbar">
                 <div id="logo">
-                    <a href="home.html"><img src="imagens/logo.png" alt="Logo Taciana Feitosa Arquitetura"></a>
+                    <a href="index.html"><img src="imagens/logo.png" alt="Logo Taciana Feitosa Arquitetura"></a>
                 </div>
                 <nav id="nav-menu">
                     <ul>
-                        <li><a href="home.html" aria-current="page">Home</a></li>
+                        <li><a href="index.html" aria-current="page">Home</a></li>
                         <li><a href="sobre.html" rel="next">Sobre</a></li>
                         <li><a href="projetos.html">Projetos</a></li>
                         <li><a href="contato.html">Contato</a></li>
@@ -48,7 +48,7 @@
     <footer>
         <section id="nav-footer">
             <div id="logo-footer">
-                <a href="home.html"><img src="imagens/logo.png" alt="Logo Taciana Feitosa Arquitetura"></a>
+                <a href="index.html"><img src="imagens/logo.png" alt="Logo Taciana Feitosa Arquitetura"></a>
             </div>
             <div id="contato">
                 <div id="socials">
