--- a/contato.html
+++ b/contato.html
@@ -29,7 +29,7 @@
         <section id="seçao-contato">
             <h2>Envie-nos uma mensagem</h2>
             <div id="formulario">
-                <form action="https://formspree.io/f/mblawqbn" method="POST">
+                <form action="https://formspree.io/f/xldwzzaq" method="POST">
                 <label>Seu e-mail:</label>
                 <input id="email" type="email" name="email">
                 <label>Sua mensagem:</label>
